--- a/templates/index3.html
+++ b/templates/index3.html
@@ -25,7 +25,7 @@
     <h1>Data Display</h1>
     <h2>Select a Tag</h2>
     <select id="tagSelect">
-        <option value="torch">torch</option>
+        <option value="pytorch">pytorch</option>
         <option value="pandas">pandas</option>
         <option value="numpy">numpy</option>
         <option value="sklearn">sklearn</option>
